--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL=https://whatsapp-clone-production-7cdd.up.railway.app
+VITE_API_URL=https://whatsapp-clone-production-7cdd.up.railway.app
